Bug 441696 - QIF Import not importing Payees
Summary: QIF Import not importing Payees
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: git (master)
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-29 12:27 UTC by Hamdsa
Modified: 2024-12-19 10:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hamdsa 2021-08-29 12:27:30 UTC
SUMMARY
I have over 20 years worth of data in Quicken that I'm trying to import via QIF files to KMyMoney. I have tried multiple times, using multiple selections within quicken (Individual accounts, selected accounts, various import options i.e. security list, memorized payee list checked etc.) but none of the import the payees. I get all the accounts listing and transactions but none of the transactions have any payee for 200+ accounts.
When I go to Payee section, it's blank.
I'm using KMyMoney Version 5.1.80-b29cd34c4 on Windows 10 Pro.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT
No Payees imported via QIF files

EXPECTED RESULT
Transactions with Payee Info

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 2 Thomas Baumgart 2021-08-30 19:50:55 UTC
Git commit a6909d07115cb293f27bd5f72860404e125193b8 by Thomas Baumgart.
Committed on 30/08/2021 at 19:50.
Pushed by tbaumgart into branch 'master'.

Don't remove payee if still referenced

The statement importer creates payees on the fly if they are not known
and destroys all those after the statement processing is done that are
not referenced. Since the reference check was not performed all of them
were removed at the end of the import.

This change forces to throw an exception when a payee is still
referenced when it should be removed which will take care of keeping it
after the import of the statement.

M  +3    -1    kmymoney/mymoney/mymoneyfile.cpp

https://invent.kde.org/office/kmymoney/commit/a6909d07115cb293f27bd5f72860404e125193b8